--- a/AdDemo/app/build.gradle
+++ b/AdDemo/app/build.gradle
@@ -31,8 +31,8 @@ android {
             signingConfig signingConfigs.config
         }
         debug {
-            shrinkResources true
-            minifyEnabled true
+            shrinkResources false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
